--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #0e0d0d;
+  padding: 0 5rem;
+  font-family: 'Ubuntu', sans-serif;
+}
 
-body{
-    background: black;
+.gradient-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 0.3;
+  max-width: 60rem;
+
+  .gradient-box {
+    display: flex;
+    align-items: center;
+    margin: auto;
+
+    position: relative;
+    padding: 1rem;
+    box-sizing: border-box;
+
+    $border: 3px;
+    color: #fff;
+    background: #e2ada4;
+    background-clip: padding-box; /* !importanté */
+    border: solid $border transparent; /* !importanté */
+    border-radius: 1em;
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+      margin: -$border; /* !importanté */
+      border-radius: inherit; /* !importanté */
+      background: linear-gradient(to right, red, orange);
+    }
+  }
 }
