--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,12 @@
   </div>
 </div>
 
-<div id="Connection">
+<div id="connection">
   <h1>Simply keep your server <span class="sec-color">up-to-date</span></h1>
-  <h2>Juste pour niquer des mères en html/css/js/ts</h2>
+  
+  <terminal [logs]="logs"></terminal>
+
+
+
+
 </div>
