--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../src/colors.scss';
 
+p{
+  padding: 0;
+  margin: 0;
+}
+
 body {
   background-color: #0e0d0d;
   padding: 0 5rem;
