--- a/src/app/components/terminal/terminal.component.scss
+++ b/src/app/components/terminal/terminal.component.scss
@@ -2,10 +2,42 @@
 
 #terminal {
   border: 2px solid white;
-  padding: 1rem 2rem;
   border-radius: 0.5rem;
   max-width: 60rem;
   min-width : 40rem;
+
+#terminal-header{
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgba(182, 182, 182, 0.185);
+    padding: 0 1rem;
+    height: 2rem;
+    
+
+    #terminal-title{
+        color: rgba(255, 255, 255, 0.425);
+    }
+    
+    .ter-header-act-btn-wrapper{
+        
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+
+        .ter-header-act-btn{
+            height: 0.8rem;
+            width: 0.8rem;
+            border-radius: 0.8rem;
+        }
+    }
+}
+
+
+#terminal-content{
+    padding: 1rem 2rem;
+}
 
   .code-line {
     display: flex;
