--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,12 +54,23 @@
 
 
 #connection{
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+
+  p{
+    max-width: 40rem;
+    text-align: center;
+  }
+
     h1{
         color: white;
         text-align: center;
     }
 
-
+    margin-bottom: 8rem;
 
     
 }
