--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,10 +4,11 @@
 p{
   padding: 0;
   margin: 0;
+  color: white;
 }
 
 body {
-  background-color: #0e0d0d;
+  background-color: $black;
   padding: 0 5rem;
   font-family: 'Ubuntu', sans-serif;
 }
