fix terminal size.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -84,3 +84,12 @@
 
   margin-bottom: 8rem;
 }
+
+
+#connection{
+  terminal{
+    min-width: 14rem;
+    max-width: 40rem;
+    width: 80%;
+  }
+}
