--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,12 @@
   <h1>Simply keep your server <span class="sec-color">up-to-date</span></h1>
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro accusantium consequatur nesciunt assumenda necessitatibus. Sit eius tempore mollitia asperiores ullam illum earum animi cum, quas cumque, consequuntur pariatur, porro modi.</p>
-  <terminal [logs]="logs"></terminal>
+  @defer(on viewport){
+    <terminal [logs]="logs"></terminal>
+  }@placeholder{
+    <div>placholder</div>
+  }
+  
 
 </div>
 
