--- a/src/app/components/terminal/terminal.component.scss
+++ b/src/app/components/terminal/terminal.component.scss
@@ -4,6 +4,7 @@
   border: 2px solid white;
   border-radius: 0.5rem;
   width: 100%;
+  min-height: 10rem;
   background-color: $black;
   filter: drop-shadow(0 0 4rem $primary-op50);
 
