add first footer element.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,3 +69,32 @@
   <div></div>
   }
 </div>
+
+<div id="footer">
+  @defer(on viewport){
+  <div id="support">
+    <h2>Support</h2>
+    <span>discord</span>
+    <span>mail</span>
+    <span>git</span>
+  </div>
+  <div id="social">
+    <h2>Social Media</h2>
+    <span>Twitter / x</span>
+    <span>github</span>
+    <span>Codefling</span>
+  </div>
+  <div id="newsletter">
+    <h2>Subscribe our newsletter</h2>
+    <div class="mail-input">
+      <input type="email" placeholder="your email">
+      <button>
+        send
+      </button>
+    </div>
+
+  </div>  
+  }@placeholder {
+  <div></div>
+  }
+</div>
