add link element.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,15 +74,19 @@
   @defer(on viewport){
   <div id="support">
     <h2>Support</h2>
-    <span>discord</span>
-    <span>mail</span>
-    <span>git</span>
+    <div class="link-wrapper">
+      <link-element label='Discord' ref="https://github.com/"></link-element>
+      <link-element label='Github' ref="https://github.com/"></link-element>
+      <link-element label='Email' ref="https://github.com/"></link-element>
+    </div>
   </div>
   <div id="social">
     <h2>Social Media</h2>
-    <span>Twitter / x</span>
-    <span>github</span>
-    <span>Codefling</span>
+      <div class="link-wrapper">
+        <link-element label='Codefling' ref="https://github.com/"></link-element>
+        <link-element label='Github' ref="https://github.com/"></link-element>
+        <link-element label='Twitter/X' ref="https://github.com/"></link-element>
+      </div>
   </div>
   <div id="newsletter">
     <h2>Subscribe our newsletter</h2>
