udpate app.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,32 +50,21 @@
 </div>
 
 <div id="interface">
-  <h1>
+  <h1 style="margin-bottom: 4rem;">
     Utilisez une
     <span class="sec-color">interface</span>
     simple et efficace.
   </h1>
 
-  <p style="margin-bottom: 4rem;">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro accusantium
-    consequatur nesciunt assumenda necessitatibus. Sit eius tempore mollitia
-    asperiores ullam illum earum animi cum, quas cumque, consequuntur pariatur,
-    porro modi.
-  </p>
 
   @defer(on viewport){
-
   <div class="shema-wrapper">
-
-
-
     <div class="shema-icon-wrapper">
       <fadeIn-img [src]="'../assets/icons/windows-fill.svg'"></fadeIn-img>
       @defer(on timer(2.6s)){
       <div class="shema-icon-shadow"></div>
       }
     </div>
-
 
     <div class="dynamic-arrow-wrapper">
       <dynamic-arrow [width]="8"></dynamic-arrow>
@@ -92,13 +81,18 @@
       <div class="shema-icon-shadow"></div>
       }
     </div>
-
-
   </div>
-
   }@placeholder{
   <div></div>
   }
+
+  <h2>the easiest way to communicate with your linux server.</h2>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+    recusandae pariatur laudantium, placeat, non consequatur, alias ipsa omnis
+    quibusdam quisquam mollitia voluptates? Distinctio inventore veniam animi
+    ipsam deleniti. Quaerat, sequi!
+  </p>
 </div>
 
 <div id="footer">
