--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -95,6 +95,7 @@
     display: flex;
     gap: 1rem;
     align-items: center;
+    margin-bottom: 4rem;
 
     .dynamic-arrow-wrapper {
       display: flex;
