add transparent card.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,6 @@
     simple et efficace.
   </h1>
 
-
   @defer(on viewport){
   <div class="shema-wrapper">
     <div class="shema-icon-wrapper">
@@ -93,6 +92,32 @@
     quibusdam quisquam mollitia voluptates? Distinctio inventore veniam animi
     ipsam deleniti. Quaerat, sequi!
   </p>
+</div>
+
+<div id="selection">
+  <transparent-card
+    imgSrc="https://cdn.akamai.steamstatic.com/steam/apps/252490/ss_271feae67943bdc141c1249aba116349397e9ba9.1920x1080.jpg?t=1701938429"
+    title="Je suis un titre"
+    content="Explicabo libero officia aliquid commodi sequi, delectus quas amet unde, maxime fugit rem repellat soluta sit dolores reiciendis accusantium adipisci dolore beatae quo nihil vel. Repellat minus corrupti ipsa rerum dolorem."
+  ></transparent-card>
+
+  <transparent-card
+    title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, asperiores?"
+    content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse inventore similique officia neque eveniet sit magnam minimat beatae quo nihil vel. Repellat minus corrupti ipsa rerum dolorem."
+    [link]="['READ MORE', '']"
+  ></transparent-card>
+
+  <transparent-card
+    title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, asperiores?"
+    content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse inventore similique officia neque eveniet sit magnam minimat beatae quo nihil vel. Repellat minus corrupti ipsconsectetur adipisicing elit. Esse inventore similique officia neque eveniet sit magnam minimat beatae quo nihil vel. Repellat minus corrupti ipsa rerum dolorem." 
+    [link]="['READ MORE', '']"
+  ></transparent-card>
+
+  <transparent-card
+    imgSrc="https://assets1.ignimgs.com/2018/02/24/rust-blogroll-1519436817760_160w.jpg?width=1280"
+    title="Je suis un titre"
+    content="Explicabo libero officia aliquid commodi sequi, delectus quasm repellat soluta sit dolores r. Repellat minus corrupti ipsa rerum dolorem."
+  ></transparent-card>
 </div>
 
 <div id="footer">
