--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -121,14 +121,40 @@
   }
 }
 
+
+#selection{
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  column-gap: 1rem;
+  row-gap: 1rem;
+  margin-bottom: 20rem;
+
+  transparent-card:first-child{
+    grid-column: 3 / span 5;
+  }
+
+  transparent-card:nth-child(2){
+    grid-column: 8 / span 3;
+  }
+
+  transparent-card:nth-child(3){
+    grid-row: 2;
+    grid-column: 3 / span 4;
+  }
+  
+  transparent-card:nth-child(4){
+    grid-row: 2;
+    grid-column: 7 / span 4;
+  }
+
+}
+
 #footer {
   grid-template-columns: repeat(4, 1fr);
   display: grid;
   color: $white;
   margin-bottom: 4rem;
   align-items: center;
-  min-width: 14rem;
-  padding: 0 8rem;
 
   .link-wrapper{
     display: flex;
