first title element.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
   <button class="btn">purchase</button>
 </div>
 
+
+<dynamic-title [title]="'Rust is the best Game.'"></dynamic-title>
+
 <div id="getStarted">
   <div #blurGradient class="blur-gradient-background"></div>
 
@@ -24,7 +27,7 @@
     ></transparent-benefits-card>
     } @if(!smallScreen && !xSmallScreen){
 
-      
+
     <div class="gradient-container">
       <div class="gradient-box"></div>
     </div>
