fix cmd call align.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -96,6 +96,10 @@
     quibusdam quisquam mollitia voluptates? Distinctio inventore veniam animi
     ipsam deleniti. Quaerat, sequi!
   </p>
+
+
+  <cmd-terminal></cmd-terminal>
+
 </div>
 
 <div
