fix focus on terminal.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,7 +98,11 @@
   </p>
 
 
-  <cmd-terminal></cmd-terminal>
+  @defer(on viewport){
+    <cmd-terminal></cmd-terminal>
+  }@placeholder {
+    <div class="cmd-terminal-placeholder"></div>
+  }
 
 </div>
 
