--- a/src/app/cmd-terminal/cmd-terminal.component.scss
+++ b/src/app/cmd-terminal/cmd-terminal.component.scss
@@ -18,6 +18,7 @@ p {
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   span{
     white-space-collapse:preserve;
